@@ -34,6 +34,39 @@ android {
     dataBinding {
         enabled = true
     }
+
+
+    testOptions {
+        unitTests.includeAndroidResources = true
+
+        // By default, local unit tests throw an exception any time the code you are testing tries to access
+        // Android platform APIs (unless you mock Android dependencies yourself or with a testing
+        // framework like Mockito). However, you can enable the following property so that the test
+        // returns either null or zero when accessing platform APIs, rather than throwing an exception.
+        unitTests.returnDefaultValues true
+
+        // Changes the directory where Gradle saves test reports. By default, Gradle saves test reports
+        // in the path_to_your_project/module_name/build/outputs/reports/ directory.
+        // '$rootDir' sets the path relative to the root directory of the current project.
+        reportDir "$rootDir/test-reports"
+
+        // Changes the directory where Gradle saves test results. By default, Gradle saves test results
+        // in the path_to_your_project/module_name/build/outputs/test-results/ directory.
+        // '$rootDir' sets the path relative to the root directory of the current project.
+        resultsDir "$rootDir/test-results"
+
+        // Encapsulates options for controlling how Gradle executes local unit tests. For a list
+        // of all the options you can specify, read Gradle's reference documentation.
+        unitTests.all {
+            // Sets JVM argument(s) for the test JVM(s).
+            jvmArgs "-XX:MaxPermSize=256m"
+
+            // You can also check the task name to apply options to only the tests you specify.
+            if (it.name == "testDebugUnitTest") {
+                systemProperty "debug", "true"
+            }
+        }
+    }
 }
 
 dependencies {
@@ -86,10 +119,33 @@ dependencies {
     // Swipe Refresh layout
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
+    /*
+        Tests
+     */
     // UI and Unit Testcases
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // Hilt
+    androidTestImplementation "com.google.dagger:hilt-android-testing:2.38.1"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.38.1"
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
+
+    // For espresso test cases
+    androidTestImplementation ('com.android.support.test.espresso:espresso-core:3.0.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
+   // For recycler view actions
+    androidTestImplementation ('com.android.support.test.espresso:espresso-contrib:3.0.2') {
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude module: 'recyclerview-v7'
+    }
+
+    // For espresso activity rule
+    androidTestImplementation "com.android.support.test:rules:1.0.2"
+    androidTestImplementation "com.android.support.test:runner:1.0.2"
 }
 
 // Allow reference to generated code
